# openai-content

./: .gitignore  README.md  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py  utility.py
templates/: index.html
